--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <a class="skip-link" href="#main">Skip to Content</a>
   <header>
     <div class="header-container">
       <a href="/" class="logo-container">
@@ -20,7 +21,7 @@
     </div>
 
     <nav class="menu">
-      <button class="hamburger-button">
+      <button class="hamburger-button" aria-label="Toggle navigation menu" aria-expanded="false">
         &#9776;
       </button>
       <ul class="menu-list">
@@ -31,36 +32,37 @@
     </nav>
   </header>
 
-  <div class="content-box first-content">
-    <div class="image-container">
-      <img src="assets/images/index/the-lucky-neko-rplhB9mYF48-unsplash.jpg"
-        alt="A group of black and white cats look at the camera curiously">
+  <main tabindex="-1" id="main">
+    <div class="content-box first-content">
+      <div class="image-container">
+        <img src="assets/images/index/the-lucky-neko-rplhB9mYF48-unsplash.jpg"
+          alt="A group of black and white cats look at the camera curiously">
+      </div>
+      <div class="text">
+        <h2>Long time Internet Subjects</h2>
+        <p>Adipisicing obcaecati praesentium repellendus a iusto Debitis nesciunt eius laborum nostrum illo Illo aliquid
+          amet.</p>
+        <p>Elit necessitatibus inventore sed aliquid magnam eos, velit nisi Ea distinctio itaque suscipit animi
+          voluptate.</p>
+        <p>Elit quas similique pariatur eaque adipisicing Enim delectus neque rerum sed nobis Dolor suscipit nulla?</p>
+      </div>
     </div>
-    <div class="text">
-      <h2>Long time Internet Subjects</h2>
-      <p>Adipisicing obcaecati praesentium repellendus a iusto Debitis nesciunt eius laborum nostrum illo Illo aliquid
-        amet.</p>
-      <p>Elit necessitatibus inventore sed aliquid magnam eos, velit nisi Ea distinctio itaque suscipit animi
-        voluptate.</p>
-      <p>Elit quas similique pariatur eaque adipisicing Enim delectus neque rerum sed nobis Dolor suscipit nulla?</p>
-    </div>
-  </div>
 
-  <div class="content-box second-content">
-    <div class="image-container">
-      <img src="assets/images/index/dominic-sansotta-ITQwhPIH6rw-unsplash.jpg"
-        alt="A white cat named Jorts standing in the snow.">
+    <div class="content-box second-content">
+      <div class="image-container">
+        <img src="assets/images/index/dominic-sansotta-ITQwhPIH6rw-unsplash.jpg"
+          alt="A white cat named Jorts standing in the snow.">
+      </div>
+      <div class="text">
+        <h2>Long Time Internet Kings</h2>
+        <p>Elit quaerat ut quibusdam iure qui Quibusdam beatae praesentium quaerat aut labore debitis, possimus Veniam
+          quod ab recusandae eos inventore.</p>
+        <p>Amet nisi illo unde eligendi nemo. Libero laboriosam quaerat accusamus incidunt at. Pariatur nesciunt
+          praesentium unde dolore assumenda. Itaque officiis.</p>
+        <p>Ipsum fuga recusandae quae nesciunt nisi? Magnam maiores natus a magni iure. Tenetur error nam ab excepturi
+          natus voluptatibus aut.</p>
+      </div>
     </div>
-    <div class="text">
-      <h2>Long Time Internet Kings</h2>
-      <p>Elit quaerat ut quibusdam iure qui Quibusdam beatae praesentium quaerat aut labore debitis, possimus Veniam
-        quod ab recusandae eos inventore.</p>
-      <p>Amet nisi illo unde eligendi nemo. Libero laboriosam quaerat accusamus incidunt at. Pariatur nesciunt
-        praesentium unde dolore assumenda. Itaque officiis.</p>
-      <p>Ipsum fuga recusandae quae nesciunt nisi? Magnam maiores natus a magni iure. Tenetur error nam ab excepturi
-        natus voluptatibus aut.</p>
-    </div>
-  </div>
   </main>
 
   <footer>
